# SYMFLUENCE

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONFIG_AUDIT_REPORT.md  CONFIG_VALIDATION_TESTS.md  CONTRIBUTING.md  FireSizes0.txt  INSTALL.md  MANIFEST.in  MIGRATION_PLAN.md  Makefile  QUICKSTART_GUIDE.md  README.md  REFACTORING_COMPLETE_SUMMARY.md  REFACTORING_PROGRESS.md  REFACTORING_SUMMARY.md  SUMMA_CALIBRATION_BUGS_FIXED.md  __init__.py  check_cds_access.py  cli_performance_baseline.txt  config_Dalalven River.yaml  config_NordicWatershed.yaml  config_South Saskatchewan River at Saskatoon.yaml  config_domain_name.yaml  config_example_basin.yaml  config_test.yaml  environment.yml  failed_log_tail.txt  fix_easymore_pandas.py  fix_mizuroute_controls.py  inspect_tws_gulkana.py  libspy.dylib  manual_ngen_out.txt  package-lock.json  package.json  pixi.toml  pyproject.toml  pytest.ini  (+20 more)
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-release.yml  ci.yml  cross-platform.yml  docs.yml  install-validate-parallel.yml  install-validate.yml  publish-pypi.yml  release-binaries.yml
0_config_files/: README.md  config_North_America.yaml  config_template.yaml  config_template_comprehensive.yaml
docs/: CNAME  CONFIG.md  CONFIGURATION.md  CROSS_PLATFORM_PROFILING.md  DYNAMIC_LINKING_STRATEGY.md  ET_CALIBRATION_SETUP.md  ET_QUICKSTART.md  IOPS_INVESTIGATION_GUIDE.md  MIGRATION_GUIDE.md  MODEL_PREPROCESSOR_REFACTORING_GUIDE.md  Makefile  NPM_INSTALLABLE_ROADMAP.md  NPM_RELEASE_CHECKLIST.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  SYSTEM_IO_PROFILING_GUIDE.md  SYSTEM_REQUIREMENTS.md  index.html  requirements.txt
docs/personal-site/: README.md  index.html
docs/plans/: native_gradient_support.md
docs/source/: agent_guide.rst  agent_tools.rst  api.rst  architecture.rst  calibration.rst  changelog.rst  cli_reference.rst  conf.py  config_system.md  config_system.rst  configuration.rst  developer_guide.rst  earth_engine_integration.rst  et_calibration_setup.md  et_quickstart.md  examples.rst  getting_started.rst  index.rst  installation.rst  testing.rst  troubleshooting.rst
domain_domain/optimization/: test_optimization_parallel_iteration_results.csv
examples/: MIGRATION_GUIDE.md  README.md
examples/01_point_vertical_flux_estimation/: .gitignore  01a_point_scale_snotel.ipynb  01b_point_scale_fluxnet.ipynb  config_fluxnet_CA-NS7.yaml  config_paradise.yaml
examples/02_watershed_modelling/: .gitignore  02a_basin_lumped.ipynb  02b_basin_semi_distributed.ipynb  02b_troute_routing.ipynb  02c_basin_distributed.ipynb  config_basin_lumped.yaml  config_basin_lumped_anvil.yaml  config_elevation_distributed.yaml  config_iceland_tutorial.yaml  config_north_america_tutorial.yaml  config_semi_distributed.yaml
examples/03_large_domain_simulation/: 03a_domain_regional.ipynb  03b_domain_continental.ipynb  config_iceland_tutorial.yaml  config_north_america_tutorial.yaml
examples/04_workshop_notebooks/: 04a_logan_river_workshop.ipynb  04b_provo_river_workshop.ipynb  04c_sagehen_creek_workshop.ipynb  config_logan_river_lumped.yaml  config_provo_river_lumped.yaml  config_sagehen_creek_coupled.yaml
examples/configs/: config_continental_tutorial.yaml  config_fluxnet_notebook.yaml
npm/: .npm-token-setup.md  install.js  package.json  symfluence-0.5.8.tgz
npm/lib/: binary-wrapper.js  platform.js
paper/: .gitignore  create_presentations_v2.py
paper/part_1_outstanding_in_every_field/: manuscript.tex  references.bib
paper/part_2_the_registry_and_the_river/: manuscript.md  manuscript.tex  references.bib
paper/part_3_from_configuration_to_prediction/: manuscript.md  manuscript.tex  references.bib
scripts/: add_config_mixin.py  add_spdx_headers.py  batch_add_configmixin.py  batch_define_domains.py  benchmark_calibration_comparison.py  benchmark_hbv_all_optimizers.py  benchmark_hbv_gradients.py  benchmark_hbv_native_vs_fd.py  benchmark_hbv_optimizers.py  benchmark_hbv_real.py  check_broad_exceptions.py  check_version_sync.sh  create_release_tarball.sh  extend_iceland_forcing.py  generate_minimal_test_data.py  generate_toolchain.sh  hbv_bow_banff_study.py  hbv_calibration_study.py  migrate_config_pattern.py  stage_release_artifacts.sh  symfluence-bootstrap  sync_requirements_from_pyproject.py  verify_binary_portability.sh
scripts/studies/: hbv_calibration_study.py  rhessys_v_ignacio_study.py  run_hbv_daily_v_hourly_comparison.py
src/symfluence/: __init__.py  __main__.py  cli.py  core.py  main_cli.py  symfluence_version.py  workflow_steps.py
tests/: TESTING.md  TESTING_STRATEGY.md  TEST_OPTIMIZATION_PLAN.md  __init__.py  conftest.py  explore_carra_product_types.py  explore_cerra_api.py  pytest.ini  test_calibration_demo.py  test_calibration_fyris_config.yaml  test_carra_summa_config.yaml  test_cerra_summa_config.yaml  test_cloud_acquisition.py  test_config_loader.py  test_distributed_basin.py  test_full_summa_pipeline.py  test_helpers.py  test_lumped_basin.py  test_point_scale.py  test_quick_summa_run.py  test_regional_domain.py  test_regional_reanalysis.py  test_semi_distributed_basin.py  utils_geospatial.py
tests/configs/: profile_report.json  profile_report.txt  system_io_report.json  system_io_report.txt  test_calibration_ellioaar_config.yaml  test_calibration_fyris_config.yaml  test_carra_summa_config.yaml  test_cerra_full_config.yaml  test_cerra_summa_config.yaml  test_ellioaar_grace_tws_optimization.yaml  test_ellioaar_summa_optimization.yaml  test_fyris_summa_esa_sm.yaml  test_fyris_summa_ismn_only.yaml  test_fyris_summa_optimization.yaml  test_fyris_summa_smap_optimization.yaml  test_gulkana_dual_calibration.yaml  test_gulkana_glacier_full_pipeline.yaml  test_paradise_summa_optimization.yaml  test_provo_summa_optimization.yaml  test_quick_summa_config.yaml  test_sca_modis_optimization.yaml
tests/e2e/: conftest.py  test_bow_full_optimization.py  (+5 more)
tmp_repro/: test_input.nc
tools/: README.md
(+2464 files in other folders)
