[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/symfluence"]

[project]
name = "symfluence"
version = "0.5.6"         # <- static to avoid plugin issues
description = "SYnergistic Modelling Framework for Linking and Unifying Earth-system Nexii for Computational Exploration"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "SYMFLUENCE Team", email = "dev@symfluence.org" }]

# Start with an empty list to unblock; we’ll fill runtime deps later.
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "xarray",
  "pint_xarray",
  "distributed",
  "pyviscous",
  "torch",
  "scikit-learn",
  "pyswarms",
  "geopandas",
  "rasterio",
  "pyproj",
  "shapely",
  "fiona",
  "easymore",
  "rasterstats",
  "pvlib",
  "cdo",
  "seaborn",
  "plotly",
  "findlibs",
  "netCDF4",
  "hydrobm",
  "baseflow",
  "matplotlib",
  "SALib",
  "psutil",
  "alive-progress",
  "tqdm",
  "contextily",
  "pyyaml",
  "requests",
  "cdsapi",
  "hs_restclient",
  "s3fs",
  "numexpr",
  "cftime",
  "pytest", 
  "sphinx", 
  "jupyterlab", 
  "ipykernel"
]

[project.scripts]
# thin wrapper that delegates to your existing CLI
symfluence = "symfluence.cli:main"

[project.urls]
Homepage = "https://symfluence.org"
Source = "https://github.com/DarriEy/SYMFLUENCE"
Issues = "https://github.com/DarriEy/SYMFLUENCE/issues"
Documentation = "https://symfluence.org/"

[tool.hatch.build.targets.sdist]
include = [
  "src/symfluence",
  "README.md",
  "LICENSE",
  "MANIFEST.in",
  "requirements.txt"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (integration tests, calibration demos)",
    "calibration: marks calibration-related tests",
    "requires_data: marks tests that require external data downloads",
]
filterwarnings = [
    "ignore:Conversion of an array with ndim > 0 to a scalar is deprecated:DeprecationWarning",
]
# Default: run all tests including slow ones
# To skip slow tests in CI: pytest -m "not slow"